--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon ./src/app.ts",
-    "start": "npx prisma generate && node ./dist/server.js"
+    "start": "npx prisma generate && node ./dist/server.js",
+    "deploy": "yarn build && pm2 start dist/server.js --name babies-backend --PORT=3000"
   },
   "author": "Rytis Mitkus",
   "license": "MIT",
