--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "dev": "nodemon ./src/app.ts",
     "start": "npx prisma generate && node ./dist/server.js",
-    "deploy": "yarn && yarn build && pm2 start dist/server.js --name babies-backend --PORT=3000"
+    "deploy": "yarn && yarn build && pm2 start dist/server.js --name babies-backend"
   },
   "author": "Rytis Mitkus",
   "license": "MIT",
