--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,4 @@ jobs:
         USERNAME: ${{ secrets.USERNAME }}
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
-        run: cd ../var/backend/babies-backend
-        script: yarn run deploy
+        script: cd ../var/backend/babies-backend && yarn run deploy
