--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,9 @@ jobs:
 
     - name: Executing remote command
       uses: appleboy/ssh-action@master
-      working-directory: ../var/backend/babies-backend
       with:
         host: ${{ secrets.HOST }}
         USERNAME: ${{ secrets.USERNAME }}
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
-        script: yarn run deploy
+        script: cd ~/../var/backend/babies-backend && yarn run deploy
