--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,6 @@ jobs:
         USERNAME: ${{ secrets.USERNAME }}
         PORT: ${{ secrets.PORT }}
         KEY: ${{ secrets.SSHKEY }}
-        script: cd ~/../var/backend/babies-backend && yarn run deploy
+        script: |
+          cd ~/../var/backend/babies-backend
+          yarn run deploy
