--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "src/app.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon ./src/app.ts",
+    "dev": "npx prisma generate && nodemon ./src/app.ts",
     "start": "npx prisma generate && node ./dist/server.js",
-    "deploy": "yarn && yarn build && pm2 restart ./dist/app.js"
+    "deploy": "yarn && npx prisma generate && yarn build && pm2 restart ./dist/app.js"
   },
   "author": "Rytis Mitkus",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^4.2.0",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.6.4",
@@ -22,7 +23,6 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "typescript": "^4.7.4",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^7.32.0 || ^8.2.0",
@@ -35,6 +35,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-unicorn": "^43.0.2"
+    "eslint-plugin-unicorn": "^43.0.2",
+    "typescript": "^4.7.4"
   }
 }
