--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "author": "Rytis Mitkus",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^4.2.0",
+    "@prisma/client": "^4.2.1",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.6.4",
+    "apollo-server-express": "^3.10.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
