--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apollo-server-express": "^3.10.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "graphql": "^16.5.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1"
